@@ -3,6 +3,8 @@
 
 Version 8.0.9
 
+  - Fix for Bug#27185332, WL#11210:ERROR IS THROWN WHEN NESTED EMPTY DOCUMENTS ARE INSERTED TO COLLECTION.
+
   - Fix for Bug#27151601, WL#11210: DOCUMENT PATCH EXPRESSIONS ARE NOT SUPPORTED.
 
   - WL#11210, DevAPI: Modify/MergePatch.
